# tail_cbc

./: Cargo.toml  README.md
src/: decrypt.rs  encrypt.rs  lib.rs  unaligned_bytes.rs  unaligned_bytes_mut.rs
