[package]
name = "tail_cbc"
version = "0.1.0"
description = "Cipher Block Chaining (CBC) block cipher mode of operation with unaligned size support"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["crypto", "block-mode", "ciphers"]
categories = ["cryptography", "no-std"]
readme = "README.md"
repository = "https://github.com/kazuki0824/tail_cbc"

[dependencies]
cipher = "0.4.3"

[dev-dependencies]
cipher = { version = "0.4.3", features = ["dev"] }
